# Simple-Client-server-Program

./: .gitignore
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  server.cpp
